# CS_Vortex_b_b

vortex/: .env.example  .gitignore  README.md  pyproject.toml
vortex/config/: __init__.py  constants.py  logging.yaml  settings.py
vortex/core/: __init__.py  database.py  exceptions.py  legal_compliance.py  memory_manager.py  network.py  queue_manager.py  state.py  streaming_memory.py
vortex/core/ai/: __init__.py  advisory.py  fallbacks.py  openrouter.py
vortex/core/authority/: compliance.py  hierarchy.py  validator.py
vortex/domain/: __init__.py  enums.py  evidence.py  lifecycle.py  models.py
