[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vortex"
version = "1.0.0"
description = "Enterprise-grade bug bounty automation framework with AI integration"
authors = [{name = "Vortex Team", email = "team@vortex.security"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    # Core dependencies
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.2",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    
    # Database
    "aiosqlite>=0.19.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    
    # Web framework
    "flask>=2.3.0",
    "flask-socketio>=5.3.0",
    "flask-cors>=4.0.0",
    "jinja2>=3.1.0",
    
    # AI and ML
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    
    # Security and crypto
    "cryptography>=41.0.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    
    # Network and parsing
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "urllib3>=2.0.0",
    "requests>=2.31.0",
    
    # Utilities
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.0",
    
    # Testing and validation
    "jsonschema>=4.19.0",
    "validators>=0.22.0",
    "python-magic>=0.4.27",
    
    # Monitoring and logging
    "structlog>=23.1.0",
    "prometheus-client>=0.17.0",
    "sentry-sdk>=1.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

performance = [
    "uvloop>=0.17.0",
    "orjson>=3.9.0",
    "cython>=3.0.0",
]

monitoring = [
    "grafana-client>=3.5.0",
    "elasticsearch>=8.9.0",
    "redis>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/vortex-security/vortex"
Documentation = "https://docs.vortex.security"
Repository = "https://github.com/vortex-security/vortex"
Issues = "https://github.com/vortex-security/vortex/issues"

[project.scripts]
vortex = "main:cli"
vortex-web = "web_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vortex*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security-related",
    "compliance: marks tests as compliance-related",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
